--- a/PIDev_java/src/UI/OffreUI/RendezVousFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/RendezVousFXML.fxml
@@ -4,11 +4,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -136,6 +138,13 @@
             </HBox>
          </children>
       </Pane>
-      <ListView fx:id="rdvListe" layoutX="202.0" layoutY="127.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="351.0" prefWidth="573.0" />
+      <GridPane fx:id="pnlHost" layoutX="193.0" layoutY="109.0" prefHeight="293.0" prefWidth="649.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="193.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="107.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
    </children>
 </AnchorPane>
