--- a/PIDev_java/src/UI/UI_formation/FormationDetailBack.fxml
+++ b/PIDev_java/src/UI/UI_formation/FormationDetailBack.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="582.0" prefWidth="835.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationDetailBackController">
+<AnchorPane id="AnchorPane" prefHeight="569.0" prefWidth="835.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationDetailBackController">
     <stylesheets>
         <URL value="@formationdetailback.css" />
     </stylesheets>
@@ -16,48 +16,61 @@
       <Pane layoutX="-3.0" prefHeight="585.0" prefWidth="248.0" style="-fx-background-color: #5a727e;" />
       <VBox layoutX="276.0" layoutY="134.0" prefHeight="385.0" prefWidth="171.0" spacing="40.0">
          <children>
-            <Label text="Url ">
+            <Label text="Url " textFill="#123896">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label text="Titre ">
+            <Label text="Titre " textFill="#123896">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label text="Domaine ">
+            <Label text="Domaine " textFill="#123896">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label text="Description ">
+            <Label text="Déscription " textFill="#123896">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <Label text="Owner ">
+            <Label text="Owner " textFill="#123896">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <VBox layoutX="447.0" layoutY="134.0" prefHeight="385.0" prefWidth="375.0" spacing="68.0">
+      <VBox layoutX="461.0" layoutY="134.0" prefHeight="417.0" prefWidth="366.0" spacing="60.0">
          <children>
             <Label fx:id="lb_url_back" text="Label" />
-            <Label fx:id="lb_titre_back" text="Label" />
-            <Label fx:id="lb_domaine_back" text="Label" />
-            <Label fx:id="lb_description_back" text="Label" />
-            <Label fx:id="lb_owner_back" text="Label" />
+            <Label fx:id="lb_titre_back" text="Label">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="lb_domaine_back" text="Label">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="lb_description_back" text="Label">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="lb_owner_back" text="Label">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
          </children>
       </VBox>
       <Label fx:id="lb_id_back" layoutX="276.0" layoutY="83.0" text="Label" visible="false" />
-      <Label layoutX="276.0" layoutY="21.0" text="Details" textFill="#da1c1c">
+      <Label layoutX="276.0" layoutY="59.0" prefHeight="55.0" prefWidth="159.0" text="Details" textFill="#da1c1c">
          <font>
-            <Font size="50.0" />
+            <Font size="35.0" />
          </font>
       </Label>
       <FontAwesomeIconView glyphName="CLOSE" layoutX="786.0" layoutY="41.0" onMouseClicked="#btn_close" size="30" />
+      <FontAwesomeIconView fx:id="id_back" glyphName="ARROW_CIRCLE_LEFT" layoutX="745.0" layoutY="41.0" onMouseClicked="#btn_back_list" size="30" />
    </children>
 </AnchorPane>
