--- a/PIDev_java/src/UI/UI_User/UserAdd.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAdd.fxml
@@ -9,6 +9,9 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -62,8 +65,21 @@
       </Group>
       <ComboBox fx:id="tfGover" layoutX="436.0" layoutY="105.0" onMouseClicked="#tfGover" prefHeight="25.0" prefWidth="162.0" promptText="Choisir Votre Governorat" />
       <ComboBox fx:id="tfSpecial" layoutX="437.0" layoutY="164.0" onMouseClicked="#tfSpecial" prefHeight="25.0" prefWidth="162.0" promptText="Choisir Votre Specialité" />
-      <Button fx:id="txtimgchose" layoutX="268.0" layoutY="343.0" mnemonicParsing="false" onAction="#imgchose" text="Image" />
-      <ImageView fx:id="imageview" fitHeight="82.0" fitWidth="103.0" layoutX="165.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="lb_image" layoutX="350.0" layoutY="355.0" prefHeight="41.0" prefWidth="56.0" />
+      <Button fx:id="txtimgchose" layoutX="277.0" layoutY="343.0" mnemonicParsing="false" onAction="#imgchose" text="Image">
+         <effect>
+            <Lighting diffuseConstant="1.65" specularConstant="0.0" surfaceScale="1.85">
+               <bumpInput>
+                  <Shadow />
+               </bumpInput>
+               <light>
+                  <Light.Distant color="#f29e9e" />
+               </light>
+            </Lighting>
+         </effect></Button>
+      <ImageView fx:id="imageview" fitHeight="41.0" fitWidth="66.0" layoutX="441.0" layoutY="355.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="lb_image" layoutX="177.0" layoutY="314.0" prefHeight="25.0" prefWidth="149.0" text="       Choisir une image">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
    </children>
 </AnchorPane>
