--- a/PIDev_java/src/UI/UI_User/UserAffiche.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAffiche.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,9 +21,39 @@
    <children>
       <Pane layoutX="10.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #d7a1a8;">
          <children>
-            <Button layoutX="404.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTochange" text="Modifier Compte" />
-            <Button layoutX="514.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#logout" text="Déconnexion" />
-            <Button layoutX="280.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTodesactiv" text="Désactiver Compte" />
+            <Button layoutX="404.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTochange" text="Modifier Compte">
+               <effect>
+                  <Lighting diffuseConstant="1.49" specularConstant="0.0" specularExponent="31.63" surfaceScale="1.97">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#f89a9a" />
+                     </light>
+                  </Lighting>
+               </effect></Button>
+            <Button layoutX="514.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#logout" text="Déconnexion">
+               <effect>
+                  <Lighting diffuseConstant="1.44" specularConstant="0.0" surfaceScale="1.73">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#f89a9a" />
+                     </light>
+                  </Lighting>
+               </effect></Button>
+            <Button layoutX="280.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#goTodesactiv" text="Désactiver Compte">
+               <effect>
+                  <Lighting diffuseConstant="1.49" specularConstant="0.0" specularExponent="19.53" surfaceScale="1.62">
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#f89a9a" />
+                     </light>
+                  </Lighting>
+               </effect></Button>
             <Label layoutX="100.0" layoutY="6.0" prefHeight="17.0" prefWidth="142.0" text="Bienvenu dans Recrutini..." />
          </children>
       </Pane>
@@ -40,28 +73,27 @@
             <Circle fill="#1b5387a6" layoutX="55.0" layoutY="48.0" radius="26.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </Pane>
-      <Label fx:id="tfNomPrenom" layoutX="300.0" layoutY="141.0" prefHeight="25.0" prefWidth="299.0" text="Nom et Prénom :">
+      <Label fx:id="tfNomPrenom" layoutX="300.0" layoutY="141.0" prefHeight="28.0" prefWidth="308.0" text="Nom et Prénom :">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
       <BorderPane layoutX="123.0" layoutY="130.0" />
-      <Label fx:id="tfmail" layoutX="300.0" layoutY="189.0" prefHeight="25.0" prefWidth="195.0" text="E-mail :">
+      <Label fx:id="tfmail" layoutX="299.0" layoutY="183.0" prefHeight="25.0" prefWidth="299.0" text="E-mail :">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label fx:id="tfspecialite" layoutX="300.0" layoutY="236.0" prefHeight="25.0" prefWidth="195.0" text="Spécialité :">
+      <Label fx:id="tfspecialite" layoutX="299.0" layoutY="224.0" prefHeight="25.0" prefWidth="195.0" text="Spécialité :">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label fx:id="tfgoverno" layoutX="300.0" layoutY="287.0" prefHeight="25.0" prefWidth="195.0" text="Governorat : ">
+      <Label fx:id="tfgoverno" layoutX="299.0" layoutY="261.0" prefHeight="25.0" prefWidth="195.0" text="Governorat : ">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="441.0" layoutY="278.0" onDragDetected="#setLabelProfileUser" prefHeight="124.0" prefWidth="135.0" />
       <Label layoutX="123.0" layoutY="77.0" prefHeight="28.0" prefWidth="185.0" text="Profile Employeur" textFill="#830707">
          <font>
             <Font name="System Bold" size="19.0" />
@@ -70,12 +102,11 @@
             <ColorAdjust />
          </effect>
       </Label>
-      <ImageView fitHeight="304.0" fitWidth="195.0" layoutX="100.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="profilePic" fitHeight="181.0" fitWidth="177.0" layoutX="118.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../GUI/Icons/icons8_user_50px.png" />
          </image>
       </ImageView>
       <ImageView fx:id="imgaffiche" fitHeight="106.0" fitWidth="169.0" layoutX="113.0" layoutY="300.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="profilePic" fitHeight="124.0" fitWidth="169.0" layoutX="440.0" layoutY="287.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
