--- a/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
+++ b/PIDev_java/src/UI/UI_User/UserAfficheBack.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="417.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_User.UserAfficheBackController">
@@ -20,6 +22,14 @@
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
+               <textFill>
+                  <LinearGradient endX="1.0" endY="1.0" startX="0.6952380952380953" startY="0.6142857142857143">
+                     <stops>
+                        <Stop color="#50769e" />
+                        <Stop color="#ffffffcf" offset="1.0" />
+                     </stops>
+                  </LinearGradient>
+               </textFill>
             </Label>
             <Label layoutX="374.0" layoutY="501.0" onMouseClicked="#GoToAllContact" />
             <Label layoutX="588.0" layoutY="501.0" onMouseClicked="#GoToAllComment" prefHeight="19.0" prefWidth="183.0" />
@@ -77,9 +87,10 @@
                </children>
             </VBox>
             <Label layoutX="503.0" layoutY="35.0" onDragDetected="#labelcompte" prefHeight="50.0" prefWidth="162.0" />
-            <TextField fx:id="rechercher" layoutX="486.0" layoutY="47.0" onKeyPressed="#rechercher" prefHeight="27.0" prefWidth="179.0" promptText="search" style="-fx-border-color: black; -fx-background-color: #FFFFFF;" />
-            <ListView fx:id="UserList" layoutX="284.0" layoutY="109.0" prefHeight="263.0" prefWidth="300.0" style="-fx-background-color: #5a727e; -fx-border-color: #5a727e;" />
+            <TextField fx:id="rechercher" layoutX="486.0" layoutY="33.0" onKeyPressed="#rechercher" prefHeight="27.0" prefWidth="179.0" promptText="search" style="-fx-border-color: black; -fx-background-color: #FFFFFF;" />
+            <ListView fx:id="UserList" layoutX="206.0" layoutY="69.0" prefHeight="303.0" prefWidth="491.0" style="-fx-background-color: #5a727e; -fx-border-color: #5a727e;" />
          </children>
       </Pane>
+      <Label fx:id="compte" alignment="CENTER" layoutX="330.0" layoutY="384.0" onMouseClicked="#compte" prefHeight="26.0" prefWidth="208.0" text="Voir les statistiques " textFill="#141212" />
    </children>
 </AnchorPane>
